[package]
name = "piston-gui"
version = "0.1.0"
authors = ["Alex Yang <aleozlx@gmail.com>"]

[dependencies]
piston_window = "0.80.0"
piston-ai_behavior = "0.24.0"
piston2d-sprite = "0.45.0"
find_folder = "0.3.0"
gfx = "0.17.1"
gfx_device_gl = "0.15.0"
image = "0.19.0"
imageproc = "0.15.0"
rusttype = "0.5"
uuid = "*"
regex = "1"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
#pyo3 = "0.3"
#numpy = "*"
#ndarray = "*"
